fixed scrollbars on mozilla

--- a/exodus/app/stylus/media/_media-cabinet.styl
+++ b/exodus/app/stylus/media/_media-cabinet.styl
@@ -7,11 +7,13 @@
         max-width 350px
 
     .bottom
-      flex-direction column-reverse
+      flex-direction column
+
+      .purchase
+        margin-bottom 70px
 
       .invited
         max-width 100%
-        margin-bottom 40px
 
         &__item
           max-width 33%
